# area-etl

./: .env.example  .gitignore  Makefile  README.md  compose.yml  main.py  pyproject.toml
seed/: municipalities.csv  municipalities_new.csv  permissions.csv  permissions_new.csv  provinces.csv  regions.csv
sql/: init.sql  init_auac.sql  init_core.sql  init_cronos.sql  init_db.sql  init_orgchart.sql  init_poa.sql  init_ppf.sql
src/: auac.py  company.py  core.py  cronos.py  location.py  orgchart.py  poa.py  ppf.py  resolution.py  settings.py  specialty.py  storage.py  udo.py  user.py  utils.py
