[project]
name = "area-etl"
version = "0.1.0"
description = "A.Re.A. utilities for Extract-Transform-Load routines"
requires-python = ">=3.12"
dependencies = [
    "connectorx>=0.4.3",
    "cx-oracle>=8.3.0",
    "jupyterlab>=4.4.5",
    "minio>=7.2.16",
    "oracledb>=3.2.0",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "polars>=1.31.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = ["ARG", "B", "C4", "D", "E", "ERA", "F", "I", "N", "PL", "RUF", "SIM", "W"]
ignore = ["D100", "D104", "E203", "E501"]
# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
case-sensitive = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"main.py" = ["PLR0915"]
